bundles/ci-0.1.0/ci-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  labels:
    app: ci-ingress
  name: ci-ingress
  namespace: ci
spec:
  rules:
  - host: ci.vfeld.net
    http:
      paths:
      - backend:
          serviceName: el-github-listener-interceptor
          servicePort: 8080
  tls:
  - hosts:
    - ci.vfeld.net
    secretName: ci-certificate
